@@ -3,7 +3,7 @@
 # Contributor: William Rea <sillywilly@gmail.com>
 
 pkgname=fontforge
-pkgver=20080330
+pkgver=20080429
 pkgrel=1
 pkgdesc="An outline and bitmap font editor"
 arch=('i686' 'x86_64')
@@ -13,8 +13,8 @@ depends=('libxkbui' 'libxi')
 makedepends=('freetype2')
 options=('!libtool' '!makeflags')
 source=(http://downloads.sourceforge.net/sourceforge/fontforge/fontforge_full-${pkgver}.tar.bz2)
-md5sums=('f1283d157327779cd864442107a8329d')
-sha1sums=('0207392300bda80b15fb50e79fc1f09d1e92a0e4')
+md5sums=('ca239de93aeceed08c263333d0e898c8')
+sha1sums=('165c137216fcadca557a5264fc2822f558b0c75a')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
